--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
      <script src="js/aos.js"></script>
     <script src="js/script.js"></script>
    <script>if ($(window).width() < 600) { $('meta[name=viewport]').attr('content','width=520, user-scalable=0'); }</script>
+
+    <!-- Global site tag (gtag.js) - Google Ads: 955579340 -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-955579340"></script>
+
+<script>
+
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag(){dataLayer.push(arguments);}
+
+  gtag('js', new Date());
+
+
+
+  gtag('config', 'AW-955579340');
+
+</script>
 </head>
 
     <body>
