--- a/tks.html
+++ b/tks.html
@@ -911,6 +911,19 @@
   gtag('js', new Date());
 
   gtag('config', 'AW-955579340');
+
+
+    $( document ).ready(function() {
+
+
+var black=$('.black')
+
+    $('.finish').fadeIn()
+     black.show()
+     $('body').css({'overflow':'hidden'})
+
+});
+
 </script>
 
 
